Adding ConfigurationProperties class to configure configurable properties Remove unused Object Mappers

--- a/mymcpserver/src/main/resources/application.properties
+++ b/mymcpserver/src/main/resources/application.properties
@@ -7,7 +7,8 @@ spring.ai.mcp.server.version=0.0.1
 spring.main.banner-mode=off
 logging.pattern.console= 
 #just ensure below path is there and accessible
-logging.file.name=d:/temp/logs/spring.log
+mcp.logging.path=/tmp/logs
+logging.file.name=${mcp.logging.path}/spring.log
 logging.level.root=ERROR
 logging.level.io.modelcontextprotocol.server.transport=DEBUG
 logging.level.com.eg.mcp.mytransport=DEBUG
