Load dynamically countries.txt file from spring property file name. Rely on spring ResourceLoader

--- a/mymcpserver/src/main/resources/application.properties
+++ b/mymcpserver/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.main.banner-mode=off
 logging.pattern.console= 
 #just ensure below path is there and accessible
 mcp.logging.path=/tmp/logs
+mcp.logging.countries-file-name=countries.txt
+## Model Context Protocol Server Configuration
 logging.file.name=${mcp.logging.path}/spring.log
 logging.level.root=ERROR
 logging.level.io.modelcontextprotocol.server.transport=DEBUG
