remove hardcoded file names, and switch to spring managed properties

--- a/mymcpserver/src/main/resources/application.properties
+++ b/mymcpserver/src/main/resources/application.properties
@@ -9,6 +9,9 @@ logging.pattern.console=
 #just ensure below path is there and accessible
 mcp.logging.path=/tmp/logs
 mcp.logging.countries-file-name=countries.txt
+mcp.logging.combined-file-name=combined.txt
+mcp.logging.in-file-name=in.txt
+mcp.logging.out-file-name=out.txt
 ## Model Context Protocol Server Configuration
 logging.file.name=${mcp.logging.path}/spring.log
 logging.level.root=ERROR
