--- a/mymcpserver/src/main/resources/application.properties
+++ b/mymcpserver/src/main/resources/application.properties
@@ -12,6 +12,7 @@ mcp.logging.countries-file-name=countries.txt
 mcp.logging.combined-file-name=combined.txt
 mcp.logging.in-file-name=in.txt
 mcp.logging.out-file-name=out.txt
+mcp.logging.images-server-url=http://localhost:8080/images/
 ## Model Context Protocol Server Configuration
 logging.file.name=${mcp.logging.path}/spring.log
 logging.level.root=ERROR
