--- a/mymcpserver/src/main/resources/application.properties
+++ b/mymcpserver/src/main/resources/application.properties
@@ -7,7 +7,14 @@ spring.ai.mcp.server.version=0.0.1
 spring.main.banner-mode=off
 logging.pattern.console= 
 #just ensure below path is there and accessible
-logging.file.name=d:/temp/logs/spring.log
+mcp.logging.path=/tmp/logs
+mcp.logging.countries-file-name=countries.txt
+mcp.logging.combined-file-name=combined.txt
+mcp.logging.in-file-name=in.txt
+mcp.logging.out-file-name=out.txt
+mcp.logging.images-server-url=http://localhost:8080/images/
+## Model Context Protocol Server Configuration
+logging.file.name=${mcp.logging.path}/spring.log
 logging.level.root=ERROR
 logging.level.io.modelcontextprotocol.server.transport=DEBUG
 logging.level.com.eg.mcp.mytransport=DEBUG
