--- a/mymcpserver/src/main/resources/application.properties
+++ b/mymcpserver/src/main/resources/application.properties
@@ -6,15 +6,19 @@ spring.ai.mcp.server.version=0.0.1
 #STDIO will work if banner is disabled
 spring.main.banner-mode=off
 logging.pattern.console= 
+
+
 #just ensure below path is there and accessible
-mcp.logging.path=/tmp/logs
-mcp.logging.countries-file-name=countries.txt
-mcp.logging.combined-file-name=combined.txt
-mcp.logging.in-file-name=in.txt
-mcp.logging.out-file-name=out.txt
-mcp.logging.images-server-url=http://localhost:8080/images/
+mine.mcp.logging.path=/tmp/logs
+mine.mcp.logging.countries-file-name=countries.txt
+mine.mcp.logging.combined-file-name=combined.txt
+mine.mcp.logging.in-file-name=in.txt
+mine.mcp.logging.out-file-name=out.txt
+mine.mcp.logging.images-server-url=http://localhost:8080/images/
+
+
 ## Model Context Protocol Server Configuration
-logging.file.name=${mcp.logging.path}/spring.log
+logging.file.name=${mine.mcp.logging.path}/spring.log
 logging.level.root=ERROR
 logging.level.io.modelcontextprotocol.server.transport=DEBUG
 logging.level.com.eg.mcp.mytransport=DEBUG
@@ -24,7 +28,6 @@ logging.level.com.eg.mcp.providers.tools=DEBUG
 
 
 
-mine.mcpurl=false
 
 
 
