--- a/mymcpserver/src/main/resources/application.properties
+++ b/mymcpserver/src/main/resources/application.properties
@@ -24,6 +24,7 @@ logging.level.io.modelcontextprotocol.server.transport=DEBUG
 logging.level.com.eg.mcp.mytransport=DEBUG
 #logging.level.com.eg.mcp=DEBUG
 logging.level.com.eg.mcp.providers.tools=DEBUG
+logging.level.com.eg.mcp.providers.others=DEBUG
 #logging.level.io.modelcontextprotocol.spec=DEBUG
 
 
